name:          sudo4win
version:       0.1.0.0
license:       BSD3
license-file:  LICENSE
author:        Jacob Stanley
maintainer:    jacob@stanley.io
copyright:     Jacob Stanley
category:      System
build-type:    Simple
cabal-version: >=1.6


Executable sudo
  main-is: Main.hs
  hs-source-dirs: src

  build-depends:
      base                  == 4.*
    , binary                == 0.6.*
    , directory
    , distributed-process   == 0.4.*
    , network
    , network-transport-tcp == 0.3.*
    , process               == 1.1.*
    , Win32
    , Win32-services        == 0.2.*

  ghc-options: -Wall -threaded
